--- a/css/estilo.css
+++ b/css/estilo.css
@@ -1,14 +1,11 @@
 body {
 	overflow-x: hidden;
 	font-family: 'Roboto Slab','Helvetica Neue',Helvetica,Arial,sans-serif;
+	color: #818181;
 	-webkit-tap-highlight-color: #fed136
 }
-#hpMainNav {
-	background-color: #212529;
-}
-#hpMainNav .navbar-brand {
-	color: #fed136;
-	font-family: 'Kaushan Script','Helvetica Neue',Helvetica,Arial,cursive;
+.bg-grey {
+	background-color: #f6f6f6;
 }
 a {
 	color: #fed136;
@@ -17,16 +14,93 @@ a:-webkit-any-link {
 	cursor: auto;
 }
 li {
-    display: list-item;
-    text-align: -webkit-match-parent;
+	display: list-item;
+	text-align: -webkit-match-parent;
+}
+h1, h2, h3, h4, h5, h6 {
+	font-weight: 700;
+	font-family: Montserrat,'Helvetica Neue',Helvetica,Arial,sans-serif;
+	color: #212529;
+}
+section {
+	padding: 100px 0;
+}
+#hpMainNav {
+	background-color: #212529;
+}
+#hpMainNav .navbar-brand {
+	color: #fed136;
+	font-family: 'Kaushan Script','Helvetica Neue',Helvetica,Arial,cursive;
 }
 #hpMainNav .navbar-nav .nav-item .nav-link {
-    font-size: 90%;
-    font-weight: 400px;
-    padding: .75em 0;
-    letter-spacing: 1px;
-    color: #fff;
-    font-family: Montserrat,'Helvetica Neue',Helvetica,Arial,sans-serif;
+	font-size: 90%;
+	font-weight: 400px;
+	padding: .75em 0;
+	letter-spacing: 1px;
+	color: #fff;
+	font-family: Montserrat,'Helvetica Neue',Helvetica,Arial,sans-serif;
+}
+#hpMainNav .navbar-nav .nav-item.active .nav-link, #hpMainNav .navbar-nav .nav-item .nav-link:hover {
+	color: #fed136;
+}
+.intro-saudacao {
+	font-size: 40px;
+	font-style: italic;
+	line-height: 40px;
+	margin-bottom: 25px;
+	font-family: 'Droid Serif','Helvetica Neue',Helvetica,Arial,sans-serif;
+}
+.saudacao-cabecalho {
+	font-size: 50px;
+	font-weight: 700;
+	line-height: 75px;
+	margin-bottom: 50px;
+	font-family: Montserrat,'Helvetica Neue',Helvetica,Arial,sans-serif;
+}
+.btn.btn-up {
+	display: none;
+	transition: display 3s;
+	position: fixed;
+	left: auto;
+	right: 0;
+	top: auto;
+	bottom: 0;
+	color: #fff;
+	background-color: #383838;
+	border-color: #040404;
+	font-size: 20px;
+	text-align: center;
+	padding: 0;
+	height: 38px;
+	width: 38px;
+	line-height: 34px;
+	border-radius: 2px;
+	margin-bottom: 1em;
+	margin-right: 1em;
+	opacity: 0.8;
+}
+.titulo-secao {
+	font-size: 40px;
+	margin-top: 0;
+	margin-bottom: 15px;	
+}
+.subtitulo-secao {
+	font-size: 16px;
+	font-weight: 400;
+	font-style: italic;
+	margin-bottom: 75px;
+	text-transform: none;
+	font-family: 'Droid Serif','Helvetica Neue',Helvetica,Arial,sans-serif;
+}
+.titulo-servico {
+	margin: 15px 0;
+	text-transform: none;
+}
+.portfolio-link img {
+	max-width: 400px;
+	margin: 0;
+	padding: 0;
+	cursor: pointer;
 }
 
 @media (min-width: 992px) {
@@ -35,7 +109,8 @@ li {
 		padding-bottom: 25px;
 		transition: padding-top .3s,padding-bottom .3s;
 		border: none;
-		background-color: transparent;
+		background-color: #212529;
+		opacity: 0.9;
 	}
 	#hpMainNav .navbar-brand {
 		font-size: 1.75em;
@@ -44,10 +119,23 @@ li {
 	#hpMainNav .navbar-nav .nav-item .nav-link {
 		padding: 1.1em 1em!important;
 		font-size: 90%;
-		font-weight: 400;
+		font-weight: 600;
 		letter-spacing: 1px;
-		color: #000;
+		color: #fff;
 		font-family: Montserrat,'Helvetica Neue',Helvetica,Arial,sans-serif;
+	}
+	#hpMainNav.menu-compacto {
+		padding-top: 0px;
+		padding-bottom: 0px;
+		background-color: #212529;
+		opacity: 0.9;
+	}
+	#hpMainNav.menu-compacto .navbar-brand {
+		font-size: 1.25em;
+		padding: 12px 0;
+	}
+	section {
+		padding: 150px 0;
 	}
 }
 @media (max-width: 767px) {
