Atulalizãcao do projeto 27/11/2017 - 2

--- a/css/estilo.css
+++ b/css/estilo.css
@@ -1,3 +1,6 @@
+body, html {
+	height: 100%;
+}
 body {
 	overflow-x: hidden;
 	font-family: 'Roboto Slab','Helvetica Neue',Helvetica,Arial,sans-serif;
@@ -171,6 +174,27 @@ section {
 	font-size: 200px;
 	padding-left: 20%;
 }
+#carouselDepoimentos .carousel-control.right, #carouselDepoimentos .carousel-control.left {
+	background-image: none;
+	color: #383838;
+	opacity: 0.2;
+}
+#carouselDepoimentos .carousel-indicators li {
+	border-color: #040404;
+}
+#carouselDepoimentos .carousel-indicators li.active {
+	background-color: #383838;
+}
+#carouselDepoimentos .item h4 {
+	font-size: 1em;
+	line-height: 1.375em;
+	font-weight: 400;
+	font-style: italic;
+	margin: 70px 0;
+}
+#carouselDepoimentos .item span {
+	font-style: normal;
+}
 @keyframes slide {
 	0% {
 		opacity: 0;
@@ -234,12 +258,21 @@ section {
 		line-height: 75px;
 		margin-bottom: 50px;
 	}
+	#carouselDepoimentos .item h4 {
+		font-size: 19px;
+	}
+	#carouselDepoimentos .carousel-control.right, #carouselDepoimentos .carousel-control.left {
+		opacity: 1;
+	}
 }
 @media (min-width: 425px) and (max-width: 991px) {
 	.intro-saudacao, .saudacao-cabecalho {
 		font-size: 2em;
 		line-height: 40px;
 		margin-bottom: 25px;
+	}
+	#carouselDepoimentos .carousel-control.right, #carouselDepoimentos .carousel-control.left {
+		opacity: 1;
 	}
 }
 @media (max-width: 767px) {
