--- a/css/estilo-servico.css
+++ b/css/estilo-servico.css
@@ -9,7 +9,9 @@ body {
 section {
 	padding: 50px 0;
 }
-#servico-drywall {
-	padding-top: 150px;
+.servico-conteudo {
 	padding-bottom: 80px;
+}
+.servico-conteudo.servico-conteudo-padding {
+	padding-top: 150px;
 }
