--- a/css/estilo.css
+++ b/css/estilo.css
@@ -134,20 +134,20 @@ section {
 .img-servicos:hover {
 	border: 10px solid rgba(166, 166, 166, 0.5);
 }
-#portfolio * {
+#televendas * {
 	z-index: 2;
 }
-.portfolio-link img {
+.televendas-link img {
 	max-width: 400px;
 	margin: 0;
 	padding: 0;
 	cursor: pointer;
 }
-#portfolio .portfolio-item{
+#televendas .televendas-item{
 	right: 0;
 	margin: 0 0 15px
 }
-#portfolio .portfolio-item .portfolio-link{
+#televendas .televendas-item .televendas-link{
 	position: relative;
 	display: block;
 	max-width: 400px;
@@ -157,7 +157,7 @@ section {
 .icon-3x {
 	font-size: 3em!important;
 }
-#portfolio .portfolio-item .portfolio-link .portfolio-hover {
+#televendas .televendas-item .televendas-link .televendas-hover {
 	position: absolute;
 	width: 100%;
 	height: 100%;
@@ -165,10 +165,10 @@ section {
 	opacity: 0;
 	background: rgba(0,0,0,.7);
 }
-#portfolio .portfolio-item .portfolio-link .portfolio-hover:hover {
+#televendas .televendas-item .televendas-link .televendas-hover:hover {
 	opacity: 1;
 }
-#portfolio .portfolio-item .portfolio-link .portfolio-hover .portfolio-hover-content {
+#televendas .televendas-item .televendas-link .televendas-hover .televendas-hover-content {
 	font-size: 20px;
 	position: absolute;
 	top: 50%;
@@ -178,10 +178,10 @@ section {
 	text-align: center;
 	color: #fff;
 }
-#portfolio .portfolio-item .portfolio-link .portfolio-hover .portfolio-hover-content i {
+#televendas .televendas-item .televendas-link .televendas-hover .televendas-hover-content i {
 	margin-top: -12px;
 }
-#portfolio .portfolio-item .portfolio-link .portfolio-hover .portfolio-hover-content p {
+#televendas .televendas-item .televendas-link .televendas-hover .televendas-hover-content p {
 	font-size: 0.7em;
 }
 .slideanim {visibility:hidden;}
@@ -349,6 +349,9 @@ section {
 }
 .text-direito-footer {
 	display: none;
+}
+.text-red {
+	color: #EF4035 !important;
 }
 @keyframes slide {
 	0% {
