--- a/css/estilo-servico.css
+++ b/css/estilo-servico.css
@@ -15,3 +15,11 @@ section {
 .servico-conteudo.servico-conteudo-padding {
 	padding-top: 150px;
 }
+ul {
+	list-style-type: none;
+}
+.img-catalogo {
+	width: 100px;
+	height: 80px;
+	margin-top: 30px;
+}
